# MAX-Road-Generation

./: 3dsMax模型切割对齐插件项目文档.md  3dsmax脚本实现方法示列.md  CLAUDE.md  DistantArchitectureProcessingUI.ms  INSTALL.md  README.md  RoadMarkingPlugin_DevDoc.md  TEST_GUIDE.md  对齐到物体表面.ms  山形细分-汉化版.ms  设计图.excalidraw
.tasks/: 2025-01-14_1_layer_naming_improvement.md
max插件开发文档/: README.md
max插件开发文档/01-基础知识/: README.md
max插件开发文档/02-开发规范/: README.md
max插件开发文档/03-UI设计指南/: README.md
max插件开发文档/04-API参考/: README.md
max插件开发文档/05-实用示例/: README.md
max插件开发文档/06-最佳实践/: README.md
max插件开发文档/07-常见问题解答/: README.md
max插件开发文档/08-打包发布指南/: README.md
src/: CMakeLists.txt  DialogHandler.cpp  IntersectionDetection.cpp  LineGeneration.cpp  README.md  RansacAlgorithm.cpp  RoadLineGenerator.cpp  RoadLineGenerator.h  RoadLineGenerator.rc  SplineUtils.cpp  resource.h
